<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout1">

    <Button
        android:id="@+id/prevMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prevMonth" />

    <TextView
        android:id="@+id/yearMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/nextMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/nextMonth" />

    </RelativeLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1"
        android:paddingLeft="3dp"
        android:paddingRight="3dp">"
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
    <TextView android:gravity="center_horizontal"
        android:id="@+id/Sunday"
        android:background="@color/red"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/sunday"
        android:layout_weight="1"
        android:textSize="16sp">
    </TextView>
        <TextView android:gravity="center_horizontal"
        android:id="@+id/Monday"
        android:background="@color/gray"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/monday"
        android:layout_weight="1"
        android:textSize="16sp">
    </TextView>
        <TextView android:gravity="center_horizontal"
        android:id="@+id/Tuesday"
        android:background="@color/gray"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/tuesday"
        android:layout_weight="1"
        android:textSize="16sp">
    </TextView>
        <TextView android:gravity="center_horizontal"
        android:id="@+id/Wednesday"
        android:background="@color/gray"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/wednesday"
        android:layout_weight="1"
        android:textSize="16sp">
    </TextView>
        <TextView android:gravity="center_horizontal"
        android:id="@+id/Thursday"
        android:background="@color/gray"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/thursday"
        android:layout_weight="1"
        android:textSize="16sp">
    </TextView>
        <TextView android:gravity="center_horizontal"
        android:id="@+id/Friday"
        android:background="@color/gray"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/friday"
        android:layout_weight="1"
        android:textSize="16sp">
    </TextView>
        <TextView android:gravity="center_horizontal"
        android:id="@+id/Saturday"
        android:background="@color/blue"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/saturday"
        android:layout_weight="1"
        android:textSize="16sp">
    </TextView>
    </TableRow>
	</LinearLayout>
	
    <GridView
        android:id="@+id/gridView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="3" >

    </GridView>

</LinearLayout>